Allow enabling preview features via profile